--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: mi-app
-        image: '{{IMAGE}}'
+        image: ""{{IMAGE}}""
         ports:
         - containerPort: 8080
