--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,70 +1,39 @@
-name: CI/CD to AKS
+name: CI-CD Pipeline
 
 on:
   push:
-    branches: [ 'main' ]
-
-env:
-  RESOURCE_GROUP: '$RG'
-  AKS_CLUSTER: '$AKS_NAME'
+    branches: [main]
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Login to Azure (OIDC)
-        uses: azure/login@v1
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Login to ACR
+        uses: docker/login-action@v2
         with:
-          client-id: '${{ secrets.AZURE_CLIENT_ID }}'
-          tenant-id: '${{ secrets.AZURE_TENANT_ID }}'
-          subscription-id: '${{ secrets.AZURE_SUBSCRIPTION_ID }}'
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+          registry: miacrregistry7146.azurecr.io
 
-      - name: Log in to ACR
-        uses: azure/docker-login@v2
+      - name: Build and push Docker image
+        run: |
+          docker build -t miacrregistry7146.azurecr.io/myapp:${{ github.sha }} .
+          docker push miacrregistry7146.azurecr.io/myapp:${{ github.sha }}
+
+      - uses: azure/setup-kubectl@v3
         with:
-          login-server: '$ACR_LOGIN_SERVER'
+          version: 'v1.32.7'
 
-      - name: Set image tag
-        run: echo 'IMAGE_TAG=${GITHUB_SHA::8}' >> '$GITHUB_ENV'
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./demo-app
-          push: true
-          tags: '$ACR_LOGIN_SERVER/mi-app:${{ env.IMAGE_TAG }}'
-
-      - name: Output image name
-        run: echo 'IMAGE=$ACR_LOGIN_SERVER/mi-app:${{ env.IMAGE_TAG }}' >> '$GITHUB_OUTPUT'
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Login to Azure (OIDC)
-        uses: azure/login@v1
-        with:
-          client-id: '${{ secrets.AZURE_CLIENT_ID }}'
-          tenant-id: '${{ secrets.AZURE_TENANT_ID }}'
-          subscription-id: '${{ secrets.AZURE_SUBSCRIPTION_ID }}'
-
-      - name: Set AKS context
-        uses: azure/aks-set-context@v1
-        with:
-          resource-group: '${{ env.RESOURCE_GROUP }}'
-          cluster-name: '${{ env.AKS_CLUSTER }}'
+      - name: Configure kubeconfig
+        run: |
+          echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 --decode > $HOME/.kube/config
 
       - name: Deploy to AKS
-        env:
-          IMAGE: '${{ needs.build-and-push.outputs.IMAGE }}'
         run: |
-          sed -i "s|{{IMAGE}}|$IMAGE|g" k8s/deployment.yaml || true
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
-          kubectl rollout status deployment/mi-app --timeout=120s
+          kubectl set image deployment/myapp myapp=miacrregistry7146.azurecr.io/myapp:${{ github.sha }} --record
+          kubectl rollout status deployment/myapp
+
