--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,14 +4,27 @@ on:
   push:
     branches: [main]
 
+env:
+  RESOURCE_GROUP: MiResourceGroup
+  AKS_CLUSTER: MiAKSCluster
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      # 1. Checkout del repo
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - uses: docker/setup-buildx-action@v2
+      # 2. Login a Azure
+      - name: Login to Azure (OIDC)
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      # 3. Login a ACR
       - name: Login to ACR
         uses: docker/login-action@v2
         with:
@@ -19,21 +32,24 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
           registry: miacrregistry7146.azurecr.io
 
-      - name: Build and push Docker image
+      # 4. Construir y subir imagen
+      - name: Build and Push Docker image
         run: |
           docker build -t miacrregistry7146.azurecr.io/myapp:${{ github.sha }} .
           docker push miacrregistry7146.azurecr.io/myapp:${{ github.sha }}
 
+      # 5. Configurar kubectl
       - uses: azure/setup-kubectl@v3
         with:
           version: 'v1.32.7'
 
-      - name: Configure kubeconfig
+      - name: Configurar kubeconfig
         run: |
           echo ${{ secrets.KUBE_CONFIG_DATA }} | base64 --decode > $HOME/.kube/config
 
+      # 6. Desplegar a AKS
       - name: Deploy to AKS
         run: |
           kubectl set image deployment/myapp myapp=miacrregistry7146.azurecr.io/myapp:${{ github.sha }} --record
-          kubectl rollout status deployment/myapp
+          kubectl rollout status deployment/myapp --timeout=120s
 
